--- a/themes/classic/templates/header.html.twig
+++ b/themes/classic/templates/header.html.twig
@@ -3,15 +3,13 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<title>Users</title>
-		{{ HEAD | raw}}
+		{{ HEAD | raw }}
 	</head>
 
 	<body>
 		<header class="startupapi-header">
 			<div class="startupapi-header-strip pull-right">
-				<?php
-				StartupAPI::power_strip();
-				?>
+				{{ POWERSTRIP | raw }}
 			</div>
 			<h1>
 				<a href="{{ SITEROOTURL }}" class="startupapi-header-appname">{{ APPNAME }}</a>
