--- a/themes/classic/templates/power_strip.html.twig
+++ b/themes/classic/templates/power_strip.html.twig
@@ -18,7 +18,7 @@
 					<li class="dropdown">
 						<a href="#" title="Change account" class="dropdown-toggle" data-toggle="dropdown">
 							{{ AUTH.current_account.name }}
-							{% if current_plan %}
+							{% if AUTH.current_plan %}
 								<span class="label label-info" style="margin-left: 0.5em" title="{{ AUTH.current_plan.description }}">
 									{{ AUTH.current_plan.name }}
 								</span>
@@ -47,7 +47,7 @@
 							$('#startupapi-account-switcher a').click(function(e) {
 								var account_swtich_to = $(this).data('account-swtich-to');
 
-								{% if accountSwitchDestination %}
+								{% if UserConfig.accountSwitchDestination %}
 									var destination = {{ UserConfig.accountSwitchDestination|json_encode()|raw}};
 								{% else %}
 									var destination = document.location;
