Migrated invitations to twig, added JS to handle page messages.

--- a/themes/classic/templates/head_tag.html.twig
+++ b/themes/classic/templates/head_tag.html.twig
@@ -7,4 +7,5 @@
 <link href="{{ UserConfig.USERSROOTURL }}/bootstrap2/css/bootstrap-responsive.min.css" rel="stylesheet">
 <script src="{{ UserConfig.USERSROOTURL }}/jquery-1.11.1.min.js"></script>
 <script src="{{ UserConfig.USERSROOTURL }}/bootstrap2/js/bootstrap.min.js"></script>
+<script src="{{ UserConfig.USERSROOTURL }}/startupapi.js"></script>
 <link rel="stylesheet" type="text/css" href="{{ UserConfig.USERSROOTURL }}/themes/{{ UserConfig.theme }}/startupapi.css">
