--- a/themes/classic/templates/page.html.twig
+++ b/themes/classic/templates/page.html.twig
@@ -18,6 +18,12 @@
 	<!-- header ends -->
 
 	{% block base %}
+		<div id="startupapi-message" class="hide">
+			<div class="alert alert-block hide">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				<div id="startupapi-message_copy"></div>
+			</div>
+		</div>
 		{% block content %}
 		{% endblock %}
 	{% endblock %}
