--- a/themes/classic/templates/page_with_sidebar.html.twig
+++ b/themes/classic/templates/page_with_sidebar.html.twig
@@ -49,6 +49,12 @@
 			</div>
 		</div>
 		<div class="span9">
+			<div id="startupapi-message" class="hide">
+				<div class="alert alert-block hide">
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+					<div id="startupapi-message_copy"></div>
+				</div>
+			</div>
 			{% block content %}
 			{% endblock %}
 		</div>
