Moved maillist to use Twig, fixed the implementation too.

--- a/themes/classic/startupapi.css
+++ b/themes/classic/startupapi.css
@@ -22,7 +22,7 @@
 	font-style: italic;
 }
 
-/* from header.php */
+/* from header */
 #startupapi_body {
 	color: #666666;
 	font-family: georgia, garamond, serif;
