--- a/themes/classic/templates/invitations.html.twig
+++ b/themes/classic/templates/invitations.html.twig
@@ -8,7 +8,7 @@
 	});
 </script>
 
-<h1>{{UserConfig.userInvitationSectionTitle}}</h1>
+<legend>{{UserConfig.userInvitationSectionTitle}}</legend>
 <form class="form-horizontal well" action="" method="POST">
 	<div class="control-group">
 		<div class="controls">
