--- a/themes/classic/templates/page_with_sidebar.html.twig
+++ b/themes/classic/templates/page_with_sidebar.html.twig
@@ -40,9 +40,9 @@
 					{% endif %}
 
 					{% if UserConfig.maillist_exists %}
-						<li class="nav-header">Mail preferences</li>
+						<li class="nav-header">Email preferences</li>
 						<li{% if PAGE.SECTION == 'maillist'%} class="active"{% endif %}>
-							<a href="{{ UserConfig.USERSROOTURL }}/maillist.php">Mail preferences</a>
+							<a href="{{ UserConfig.USERSROOTURL }}/maillist.php">Email preferences</a>
 						</li>
 					{% endif %}
 				</ul>
