--- a/themes/classic/templates/show_badge.html.twig
+++ b/themes/classic/templates/show_badge.html.twig
@@ -1,6 +1,7 @@
 {% extends 'page_with_sidebar.html.twig' %}
 
 {% block content %}
+	<legend><a href="badges.php">My Badges</a></legend>
 	<img class="startupapi-badge-large" src="{{url}}" title="{{title}}" width="{{UserConfig.badgeLargeSize}}" height="{{UserConfig.badgeLargeSize}}"/>
 
 	<h2>{{title}}</h2>
