--- a/themes/classic/templates/badges.html.twig
+++ b/themes/classic/templates/badges.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-	<h2>My Badges</h2>
+	<legend>My Badges</legend>
 		{% for badge in badges %}
 		{% if badge.slug %}
 			<a href="{{ UserConfig.USERSROOTURL }}/show_badge.php?name={{ badge.slug }}">
