--- a/themes/classic/templates/account/subscription_details.html.twig
+++ b/themes/classic/templates/account/subscription_details.html.twig
@@ -1,87 +1,97 @@
-<div class="container-fluid" style="margin-top: 1em">
-	<div class="row-fluid">
-		<div class="span12">
-			{% if message %}
-				{% for msg in message %}
-					<div class="alert">{{ msg }}</div>
-				{% endfor %}
-			{% endif %}
+{% extends 'page_with_sidebar.html.twig' %}
+{% import 'error_messages.html.twig' as ERR %}
 
-			{% if not fatal %}
-	<div>
-		<h2>{{ account_name }}</h2>
-		<p>Account Status: <b>{%if account_isActive %}Active{%else%}Suspended{%endif%}</b></p>
-	</div>
+{% block content %}
+	<legend>
+		Accounts / <b>{{ account_name }}</b>
+		{%if account_isAdmin and not account_isIndividual %}
+			<a href="{{UserConfig.USERSROOTURL}}/edit_account.php" class="btn btn-mini"><i class="icon-pencil"></i> edit</a>
+		{%endif%}
+	</legend>
+		<div class="row-fluid">
+			<div class="span12">
+				{% if message %}
+					{% for msg in message %}
+						<div class="alert">{{ msg }}</div>
+					{% endfor %}
+				{% endif %}
 
-	<div>
-		<h3>Plan</h3>
-		<p>Name: <b>{{ plan_name }}</b> <a class="btn btn-mini" href="{{ USERSROOTURL }}/plans.php">Change</a></p>
-		<p>Description: {{ plan_description }}</p>
-		<p>Details: <a href="{{ plan_details_url }}">{{ plan_details_url }}</a></p>
-		{%if plan_downgrade_to_name %}
-			<p>Plan automatically downgrades to: <b>{{ plan_downgrade_to_name }}</b>
-				if payment is due more than {{ plan_grace_period }} day(s)</p>
-		{%endif%}
-		{%if schedule_name %}
-			<p>Payment Schedule: <b>{{ schedule_name }}</b></p>
-			<p>Payment Schedule description: {{ schedule_description }}</p>
-			<p>Charge Amount: <b>${{ "%.2f"|format(schedule_charge_amount) }}</b></p>
-			<p>Charge Period: <b>{{ schedule_charge_period }}</b> days</p>
-		{%endif%}
-	</div>
-	<div>
-		<h3>Payments</h3>
-		{%if charges|length > 0 or balance < 0 %}
-			<p>Account charges</p>
-			<ul>
-				{% set total = 0 %}
-				{% for c in charges %}
-					<li>{{ c.datetime }} ${{ c.amount }}</li>
-					{% set total = total + c.amount %}
-				{% endfor %}
-			</ul>
-			<p>Total debt: <b>${{ "%.2f"|format(total) }}</b></p>
-		{%else%}
-			<p>Account Balance: <b>${{ "%.2f"|format(balance) }}</b></p>
-		{%endif%}
-	</div>
-	{%if account_next_charge %}
+				{% if not fatal %}
 		<div>
-			<p>Next charge: <b>{{ account_next_charge }}</b></p>
+			<p>Account Status: {%if account_isActive %}<b class="badge badge-success">Active</b>{%else%}<b class="badge badge-important">Suspended</b>{%endif%}</p>
 		</div>
-	{% endif %}
-	{%if next_plan_name and next_plan_name != plan_name %}
-		<div>
-			<p>After this date following plan used:</p>
-			<p>Plan Name: <b>{{next_plan_name}}</b></p>
-			<p>Plan Description: {{next_plan_description}}</p>
-			<p>Plan Details: <a href="{{plan_details_url}}">{{next_plan_details_url}}</a></p>
 
-		</div>
-	{%endif%}
-	{%if next_schedule_name and next_plan_name == plan_name %}
-		<p>After this date following schedule used:</p>
-	{%endif%}
-	{%if next_schedule_name %}
-		<p>Payment Schedule: <b>{{next_schedule_name}}</b></p>
-		<p>Payment Schedule description: {{next_schedule_description}}</p>
-		<p>Charge Amount: <b>${{next_schedule_charge_amount}}</b></p>
-		<p>Charge Period: <b>{{next_schedule_charge_period}}</b> days</p>
-	{%endif%}
-	{%if next_schedule_name or next_plan_name %}
-		<p>You can <a href="{{ USERSROOTURL }}/controller/account/cancel.php"
-					  onclick="return confirm('Sure to cancel request?')">[cancel]</a> switching to this plan/schedule</p>
-	{%endif%}
-	{%if payment_engine %}
-	<div>
-		<p>Payments processed by: <b>{{ payment_engine }}</b></p>
-	</div>
-	{%endif%}
-	<div>
-		<i class="icon-list-alt"></i>
-		<a href="{{ USERSROOTURL }}/transaction_log.php" >View account transactions</a>
-	</div>
+		<div>
+			<h3>Plan</h3>
+			<p>Name: <b>{{ plan_name }}</b> <a class="btn btn-mini" href="{{UserConfig.USERSROOTURL}}/plans.php">Change</a></p>
+			<p>Description: {{ plan_description }}</p>
+			{% if plan_details_url %}
+				<p>Details: <a href="{{ plan_details_url }}">{{ plan_details_url }}</a></p>
 			{% endif %}
+			{%if plan_downgrade_to_name %}
+				<p>Plan automatically downgrades to: <b>{{ plan_downgrade_to_name }}</b>
+					if payment is due more than {{ plan_grace_period }} day(s)</p>
+			{%endif%}
+			{%if schedule_name %}
+				<p>Payment Schedule: <b>{{ schedule_name }}</b></p>
+				<p>Payment Schedule description: {{ schedule_description }}</p>
+				<p>Charge Amount: <b>${{ "%.2f"|format(schedule_charge_amount) }}</b></p>
+				<p>Charge Period: <b>{{ schedule_charge_period }}</b> days</p>
+			{%endif%}
 		</div>
-	</div>
-</div>
+		<div>
+			<h3>Payments</h3>
+			{%if charges|length > 0 or balance < 0 %}
+				<p>Account charges</p>
+				<ul>
+					{% set total = 0 %}
+					{% for c in charges %}
+						<li>{{ c.datetime }} ${{ c.amount }}</li>
+						{% set total = total + c.amount %}
+					{% endfor %}
+				</ul>
+				<p>Total debt: <b>${{ "%.2f"|format(total) }}</b></p>
+			{%else%}
+				<p>Account Balance: <b>${{ "%.2f"|format(balance) }}</b></p>
+			{%endif%}
+		</div>
+		{%if account_next_charge %}
+			<div>
+				<p>Next charge: <b>{{ account_next_charge }}</b></p>
+			</div>
+		{% endif %}
+		{%if next_plan_name and next_plan_name != plan_name %}
+			<div>
+				<p>After this date following plan used:</p>
+				<p>Plan Name: <b>{{next_plan_name}}</b></p>
+				<p>Plan Description: {{next_plan_description}}</p>
+				<p>Plan Details: <a href="{{plan_details_url}}">{{next_plan_details_url}}</a></p>
+
+			</div>
+		{%endif%}
+		{%if next_schedule_name and next_plan_name == plan_name %}
+			<p>After this date following schedule used:</p>
+		{%endif%}
+		{%if next_schedule_name %}
+			<p>Payment Schedule: <b>{{next_schedule_name}}</b></p>
+			<p>Payment Schedule description: {{next_schedule_description}}</p>
+			<p>Charge Amount: <b>${{next_schedule_charge_amount}}</b></p>
+			<p>Charge Period: <b>{{next_schedule_charge_period}}</b> days</p>
+		{%endif%}
+		{%if next_schedule_name or next_plan_name %}
+			<p>You can <a href="{{UserConfig.USERSROOTURL}}/controller/account/cancel.php"
+						  onclick="return confirm('Sure to cancel request?')">[cancel]</a> switching to this plan/schedule</p>
+		{%endif%}
+		{%if payment_engine %}
+		<div>
+			<p>Payments processed by: <b>{{ payment_engine }}</b></p>
+		</div>
+		{%endif%}
+		<div>
+			<i class="icon-list-alt"></i>
+			<a href="{{UserConfig.USERSROOTURL}}/transaction_log.php" >View account transactions</a>
+		</div>
+				{% endif %}
+			</div>
+		</div>
+{% endblock %}
