--- a/themes/classic/templates/login.html.twig
+++ b/themes/classic/templates/login.html.twig
@@ -2,22 +2,24 @@
 {% import 'error_messages.html.twig' as ERR %}
 
 {% block content %}
-	<div class="container-fluid" style="margin-top: 1em">
+	<div class="container-fluid">
 		<div class="row-fluid">
-			<h2>Log in</h2>
-			{% for module in UserConfig.authentication_modules %}
-				{{ ERR.showErrors(module.id, errors) }}
+			<div class="span12">
+				<h2>Log in</h2>
+				{% for module in UserConfig.authentication_modules %}
+					{{ ERR.showErrors(module.id, errors) }}
 
-				<div style="margin-bottom: 2em">
-					<h3 name="{{ module.id }}">{{ module.title }}</h3>
-					{% if login_failed[module.id] %}
-						<div class="alert alert-error">Login failed</div>
-					{% endif %}
 					<div style="margin-bottom: 2em">
-						{{ module_forms[module.id]|raw }}
+						<h3 name="{{ module.id }}">{{ module.title }}</h3>
+						{% if login_failed[module.id] %}
+							<div class="alert alert-error">Login failed</div>
+						{% endif %}
+						<div style="margin-bottom: 2em">
+							{{ module_forms[module.id]|raw }}
+						</div>
 					</div>
-				</div>
-			{% endfor %}
+				{% endfor %}
+			</div>
 		</div>
 	</div>
 {% endblock %}
