Removed a trailing period on a button

--- a/themes/classic/templates/send_email_verification_code.html.twig
+++ b/themes/classic/templates/send_email_verification_code.html.twig
@@ -14,7 +14,7 @@
 					<div id="startupapi-sendverificationcode-failure">
 						<h3>No email address provided</h3>
 						<p>You don't have an email set for your profile.</p>
-						<a class="btn btn-primary" href="{{UserConfig.USERSROOTURL}}/edit.php">Click here to add email address.</a>
+						<a class="btn btn-primary" href="{{UserConfig.USERSROOTURL}}/edit.php">Click here to add email address</a>
 					</div>
 				{% endif %}
 			</div>
